[tool.poetry]
name = "cola-all"
version = "0.1.0"
description = "Add all the repos from within a folder to the bookmarks of git-cola"
authors = ["Joachim Jablon"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cola-all = 'cola_all:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
